code_challenge_without_part_2

--- a/Assessments/Phase_2_Code_Challenge/p2_code_challenge.ipynb
+++ b/Assessments/Phase_2_Code_Challenge/p2_code_challenge.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "11  CREATE TABLE [Track]\\n(\\n    [TrackId] INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "9        71  Vinícius De Moraes & Baden Powell"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "13  The Song Remains The Same (Disc 2)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
        "0  Iron Maiden              21"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,213 +655,6 @@
     "\n",
     "# third_query should be a SQL query\n",
     "third_query_df = pd.read_sql(third_query, conn)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "source": [
-    "---\n",
-    "## Part 2: Bayesian Statistics [Suggested time: 15 minutes]\n",
-    "---\n",
-    "\n",
-    "A medical test is designed to diagnose a certain disease. The test has a false positive rate of 10%, meaning that 10% of people without the disease will get a positive test result. The test has a false negative rate of 2%, meaning that 2% of people with the disease will get a negative result. Only 1% of the population has this disease."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "source": [
-    "### 2.1) Create a numeric variable `p_pos_test` containing the probability of a person receiving a positive test result.\n",
-    "\n",
-    "Assume that the person being tested is randomly selected from the broader population."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# CodeGrade step2.1\n",
-    "# Replace None with appropriate code\n",
-    "    \n",
-    "false_pos_rate = 0.1\n",
-    "false_neg_rate = 0.02\n",
-    "population_rate = 0.01\n",
-    "\n",
-    "p_pos_test = (1 - false_neg_rate) * population_rate + false_pos_rate * (1 - population_rate)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# This test confirms that you have created a numeric variable named p_pos_test\n",
-    "\n",
-    "assert isinstance(p_pos_test, Number)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.10880000000000001\n"
-     ]
-    }
-   ],
-   "source": [
-    "# These tests confirm that p_pos_test is a value between 0 and 1\n",
-    "print(p_pos_test)\n",
-    "assert p_pos_test >= 0\n",
-    "assert p_pos_test <= 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "source": [
-    "### 2.2) Create a numeric variable `p_disease_given_pos` containing the probability of a person actually having the disease if they receive a positive test result.\n",
-    "\n",
-    "Assume that the person being tested is randomly selected from the broader population.\n",
-    "\n",
-    "Hint: Use your answer to the previous question to help answer this one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.09007352941176469\n"
-     ]
-    }
-   ],
-   "source": [
-    "# CodeGrade step2.2\n",
-    "# Replace None with appropriate code\n",
-    "    \n",
-    "false_pos_rate = 0.1\n",
-    "false_neg_rate = 0.02\n",
-    "population_rate = 0.01\n",
-    "\n",
-    "p_disease_given_pos = ((1 - false_neg_rate) * population_rate) / p_pos_test\n",
-    "print(p_disease_given_pos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# This test confirms that you have created a numeric variable named p_disease_given_pos\n",
-    "\n",
-    "assert isinstance(p_disease_given_pos, Number)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-b6008343ed116f03",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# These tests confirm that p_disease_given_pos is a value between 0 and 1\n",
-    "\n",
-    "assert p_disease_given_pos >= 0\n",
-    "assert p_disease_given_pos <= 1"
    ]
   },
   {
@@ -901,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -931,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -990,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1035,19 +828,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'z_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-608d2efa9916>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mstd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mconf_low\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mz_score\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mstandard_error\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mconf_high\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'z_score' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# CodeGrade step3.3\n",
     "# Replace None with appropriate code\n",
@@ -1056,19 +837,28 @@
     "mean = 19\n",
     "std = 3\n",
     "\n",
-    "z_score = 1.96 # For 95% CI\n",
+    "z = 1.96 # For 95% CI\n",
     "# Calculate the standard error\n",
-    "standard_error = std / (n ** 0.5)\n",
+    "margin_of_error = std / (n ** 0.5)\n",
     "\n",
-    "conf_low = (19 - 2.0)*standard_error\n",
-    "conf_high = (19 + 2.0)*standard"
+    "conf_low = (19 - 2.0)\n",
+    "conf_high = (19 + 2.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lower bound of the 95% confidence interval is 17.0\n",
+      "The upper bound of the 95% confidence interval is 21.0\n"
+     ]
+    }
+   ],
    "source": [
     "# These tests confirm that you have created numeric variables named conf_low and conf_high\n",
     "\n",
@@ -1105,8 +895,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your answer here\n",
-    "\n"
+    "The CI I got simply states that out of 100 checks 95 of them will fall between the upper cut off and the lower cut off that we have calculated above."
    ]
   },
   {
@@ -1134,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1175,8 +964,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your answer here\n",
-    "\n"
+    "Null Hypothesis - There is no significant difference in the almost average amount spent by customers who order queso and those who do not.\n",
+    "\n",
+    "Alternative Hypothesis - Customers who get queso averagely spend a significantly different amount of money than customers who do not get queso."
    ]
   },
   {
@@ -1201,8 +991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your answer here\n",
-    "\n"
+    "A Type I error would mean that the price of queso affects amount of spending when it does not cause major differences in spending. It would mean that if people realise that, they would stop buying queso as much to reduce their spending leading to lower earnings for the restaurant."
    ]
   },
   {
@@ -1227,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -1242,13 +1031,14 @@
    "source": [
     "# CodeGrade step4.3\n",
     "# Replace None with appropriate code\n",
-    "\n",
-    "p_value = None"
+    "# caculate t-statistic\n",
+    "t_stat = (19 - 20) / (3 / (n ** 0.5))\n",
+    "p_value = 2 * (1 - stats.t.cdf(abs(t_stat), df=n-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1067,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your answer here\n"
+    "Yes, we can reject the null hypothesis using a significance level of α=0.05.\n",
+    "This is because our p-value of 0.0011 is less than our significance level of 0.05. If p-value is less thatn significance level we reject null hypothesis."
    ]
   }
  ],
